--- a/events-web/src/components/BookingTicket/ticketBooking.css
+++ b/events-web/src/components/BookingTicket/ticketBooking.css
@@ -1,6 +1,7 @@
 .ticket-booking-container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 40px auto;
+    padding-top: 60px;
   }
   
   .ticket-booking-form .form-group {
@@ -27,7 +28,7 @@
   
   .ticket-booking-form button {
     padding: 0.75rem 1.5rem;
-    background-color: #007bff;
+    /* background-color: #007bff; */
     color: white;
     border: none;
     border-radius: 5px;
